<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Sequential Timer</string>
	<string name="timer_intro">Create a timer with this configuration:</string>
	<string name="button_or">OR</string>
	<string name="button_and">AND</string>
	<string name="button_add">Add condition</string>
	<string name="to">to</string>
	<string name="hint_seconds">seconds</string>
	<string name="hint_minutes">minutes</string>
	<string name="label_minimum_count">At least</string>
	<string name="label_number_of_times">times</string>
	<string name="label_exact_after">Exact after</string>
	<string name="condition_random_interval">Random interval</string>
	<string name="condition_number_of_times">Number of times</string>
	<string name="condition_exact_interval">Exact interval</string>
	<string name="condition_summary_random_interval">Stop sometime between <b>%1$s:%2$s</b> and
		<b>%3$s
		:%4$s</b></string>
	<string name="condition_summary_exact_interval">Stop after the interval
		<b>%1$s:%2$s</b></string>
	<string name="condition_summary_number_of_times">After <b>%1$s</b> times</string>
	<string name="btn_save">Save</string>
	<string name="btn_cancel">Cancel</string>
</resources>