<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		tools:showIn="@layout/view_buttons">

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/label_exact_after"/>

	<EditText
			android:id="@+id/etMinutes"
			style="@style/AppTheme.NumberEditText.Inline"
			android:hint="@string/hint_minutes"/>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text=":"/>

	<EditText
			android:id="@+id/etSeconds"
			style="@style/AppTheme.NumberEditText.Inline"
			android:hint="@string/hint_seconds"/>
</LinearLayout>