<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
												   xmlns:app="http://schemas.android.com/apk/res-auto"
												   xmlns:tools="http://schemas.android.com/tools"
												   android:layout_width="match_parent"
												   android:layout_height="match_parent"
												   android:id="@+id/linearLayout">

	<Button
			android:id="@+id/btnAdd"
			style="@style/AppTheme.Button"
			android:drawableStart="@drawable/ic_add"
			android:text="@string/button_add"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintBaseline_toBaselineOf="@+id/btnPrimary"/>

	<Button
			android:id="@+id/btnPrimary"
			style="@style/AppTheme.Button"
			android:text="@string/button_and"
			android:visibility="gone"
			tools:visibility="visible"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toEndOf="@+id/btnAdd"/>

	<Button
			android:id="@+id/btnSecondary"
			style="@style/AppTheme.Button"
			android:text="@string/button_or"
			android:visibility="gone"
			tools:visibility="visible"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			app:layout_constraintStart_toStartOf="@+id/btnPrimary"
			app:layout_constraintBaseline_toBaselineOf="@+id/btnPrimary"
			android:layout_marginStart="52dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>